--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -210,9 +210,10 @@
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="h0N-Ug-niN">
-                                <rect key="frame" x="0.0" y="50" width="600" height="482"/>
+                                <rect key="frame" x="24" y="50" width="552" height="482"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.12772253787878785" green="0.12772253787878785" blue="0.12772253787878785" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
@@ -223,8 +224,8 @@
                             <constraint firstItem="W2t-fc-lPm" firstAttribute="top" secondItem="yML-L6-s2f" secondAttribute="bottom" id="Dii-YP-3Ld"/>
                             <constraint firstItem="yML-L6-s2f" firstAttribute="leading" secondItem="UB0-0K-0gw" secondAttribute="leading" id="HBr-pc-gre"/>
                             <constraint firstItem="h0N-Ug-niN" firstAttribute="top" secondItem="UB0-0K-0gw" secondAttribute="top" constant="50" id="IYe-7Z-1ti"/>
-                            <constraint firstAttribute="trailing" secondItem="h0N-Ug-niN" secondAttribute="trailing" id="jCd-wS-wpP"/>
-                            <constraint firstItem="h0N-Ug-niN" firstAttribute="leading" secondItem="UB0-0K-0gw" secondAttribute="leading" id="kJz-xx-doA"/>
+                            <constraint firstAttribute="trailing" secondItem="h0N-Ug-niN" secondAttribute="trailing" constant="24" id="jCd-wS-wpP"/>
+                            <constraint firstItem="h0N-Ug-niN" firstAttribute="leading" secondItem="UB0-0K-0gw" secondAttribute="leading" constant="24" id="kJz-xx-doA"/>
                         </constraints>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
